<resources>
    <string name="app_name">HabitWave</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Habit Notifications</string>
    <string name="channel_description">Notifications for your scheduled habits</string>
    <string name="notification_channel_name">Default Channel</string>
    <string name="notification_channel_description">Notifications for HabitWave</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="login">Login</string>
    <string name="for_create_new_account">For create new account</string>
    <string name="powered_by_hey_fisica">Powered By Hey Fisica</string>
    <string name="add_habit">Add Habit</string>
    <string name="meditation">Meditation</string>
    <string name="add">Add</string>
    <string name="saved_habits">Saved Habits</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_have_already_account">If you have already account</string>
    <string name="user_name">User Name</string>
    <string name="favorite_habits">Favorite Habits</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="first_name">First Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="make_your_life_easy_with_habitwave">Make Your Life Easy with Habitwave</string>
    <string name="choose_habit">Choose Habit</string>
    <string name="new_habit">New Habit</string>
    <string name="remove">Remove</string>
    <string name="saved">Saved</string>

</resources>