<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hab3"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtfirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_first_name"
            android:textColor="#9C27B0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtlastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_last_name"
            android:textColor="#9C27B0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/user_name"
            android:textColor="#9C27B0" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignUPEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textColor="#9C27B0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="#9C27B0" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/purple_500"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/if_you_have_already_account"
        android:textSize="15sp" />





</LinearLayout>