<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:gravity="center_vertical"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/imgHabit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtHabitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/meditation"
        android:textSize="18sp"
        android:textColor="@color/md_theme_light_onPrimary"/>

    <Button
        android:id="@+id/btnHabitAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_button2"
        android:text="@string/add"/>

    <!--        style="@style/Widget.MyApp.Button"-->
</LinearLayout>
