<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PersonFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="#E91E63">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_photo_camera_24" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/profileImage"
            android:fontFamily="@font/typoslab"

            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullName"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/profileImage"

            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/verify_user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:src="@drawable/verified_user">
        </ImageView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/First"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/last_name"
                android:drawablePadding="10dp"
                android:hint="@string/first_name"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/last_name"
                android:drawablePadding="10dp"
                android:hint="@string/last_name"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/user_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/current_password"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:drawablePadding="10dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/new_password"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:drawablePadding="10dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:autofillHints=" "
                     />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateProfileBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/squarehabitbtn"
                android:text="@string/update">
            </Button>

            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/squarehabitbtn"
                android:text="@string/logout">
            </Button>

            <Button
                android:id="@+id/deleteAccountBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/squarehabitbtn"
                android:text="@string/delete_account"
                android:focusable="true" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
